fix - Final fixing a promo image and avatar styles to look properly on mobile and tablet

--- a/src/sections/promo/style.css
+++ b/src/sections/promo/style.css
@@ -20,12 +20,10 @@
 }
 
 .promo__image {
-  width: 546px;
-  height: 470px;
   display: flex;
   align-items: center;
   justify-content: center;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: var(--border-radius-s);
   background-color: var(--color-blue-700);
   border-radius: var(--border-radius-s);
@@ -73,12 +71,12 @@
   transition: transform 0.35s ease, box-shadow 0.2s ease, opacity 0.5s ease;
 }
 
- .promo__btn:hover,
+.promo__btn:hover,
 .promo__btn:focus {
   opacity: 0.7;
-  transform: translateY(-2px) scale(1.02); /* Подъём + лёгкое увеличение */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для объёма */
-  outline: none; /* Убираем стандартное обводку focus */
+  transform: translateY(-2px) scale(1.02);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  outline: none;
 }
 
 .promo__mouse-scroll-cont {
@@ -92,11 +90,6 @@
   .promo {
     height: auto;
     padding-bottom: 0;
-  }
-
-  .promo__image {
-    width: 100%;
-    height: 370px;
   }
 
   .promo__wrapper {
@@ -114,11 +107,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .promo__image {
-    width: 100%;
-    height: 400px;
-  }
-
   .promo__greeting {
     margin-bottom: 12px;
     font-size: 43px;
@@ -179,20 +167,20 @@
     gap: 2rem;
   }
 
+  .promo__image {
+    width: 100%;
+    height: auto;
+  }
+
+  .promo__avatar {
+    width: 100%;
+    max-height: 327px;
+  }
+
   .promo__greeting {
     font-size: 39px;
     line-height: 45px;
   }
-
-  .promo__image {
-    height: auto;
-    min-height: 286px;
-  }
-
-  /* .promo__avatar {
-    width: 70%;
-    height: auto;
-  } */
 
   .promo__btns {
     align-items: flex-start;
